--- a/lib_test/dune
+++ b/lib_test/dune
@@ -1,6 +1,6 @@
 (executable
   (name run_tests)
-  (libraries lwt lwt-parallel logs.fmt fmt.tty))
+  (libraries lwt lwt-parallel logs.fmt))
 
 (alias
   (name runtest)
